--- a/React-vite/src/components/header_login.css
+++ b/React-vite/src/components/header_login.css
@@ -116,28 +116,63 @@ nav ul li a {
   height: 80px;
   display: flex;
   align-items: center
-
 }
 
-/* .remind_circle {
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: red;
-  position: absolute;
-  margin-top: 5px;
-  margin-right: 3px;
-  top: 0;
-  right: 0;
-} */
+@keyframes scaleDraw {
+
+  /*定義關鍵幀、scaleDrew是需要繫結到選擇器的關鍵幀名稱*/
+  0% {
+    transform: scale(1);
+    /*開始為原始大小*/
+  }
+
+  25% {
+    transform: scale(1.2);
+    /*放大1.1倍*/
+  }
+
+  50% {
+    transform: scale(1);
+  }
+
+  75% {
+    transform: scale(1.2);
+  }
+}
 
 .remind_circle_icon {
   font-size: 1.5rem;
   position: absolute;
   bottom: 0;
   right: 55px;
-  color: red;
+  color: rgb(255, 90, 41);
+  -webkit-animation-name: scaleDraw;
+  /*關鍵幀名稱*/
+  -webkit-animation-timing-function: ease-in-out;
+  /*動畫的速度曲線*/
+  -webkit-animation-iteration-count: infinite;
+  /*動畫播放的次數*/
+  -webkit-animation-duration: 3s;
+  /*動畫所花費的時間*/
 }
+
+.remind_circle_icon_open {
+  position: absolute;
+  font-size: 1.2rem;
+  top: 11.8rem;
+  right: 20px;
+  color: rgb(255, 90, 41);
+  -webkit-animation-name: scaleDraw;
+  /*關鍵幀名稱*/
+  -webkit-animation-timing-function: ease-in-out;
+  /*動畫的速度曲線*/
+  -webkit-animation-iteration-count: infinite;
+  /*動畫播放的次數*/
+  -webkit-animation-duration: 3s;
+  /*動畫所花費的時間*/
+}
+
+
 
 /* ----------------------------- RWD導覽列收縮 ----------------------------- */
 
@@ -146,6 +181,7 @@ nav ul li a {
   display: none;
   cursor: pointer;
 }
+
 .hamburger-icon div {
   background-color: var(--body_background_color);
   transition: 0.4s;
